# PDFConvert

./: .gitignore  A2 PHYSICS(已优化).md  pyproject.toml
docs/: ARCHITECTURE.md  BACKEND_DESIGN.md  PRD.md  TEST_PLAN.md
src/pdfconvert/: __init__.py  cli.py  config.py  prompts.py
src/pdfconvert/core/: content_classifier.py  markdown_builder.py  pdf_parser.py  vision_analyzer.py
src/pdfconvert/lmstudio/: manager.py
